[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Spritesheets/Enemies/e.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Mateus/EnemyBush.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 210, 64, 35 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17, 26 )

[node name="InimigoArbusto" type="Area2D" groups=["Enemy"]]
script = ExtResource( 2 )

[node name="SpriteSoldadoArbusto" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="StandingUp" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -9 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -32, 0 )

[connection signal="area_entered" from="." to="." method="_on_InimigoArbusto_area_entered"]
